--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
-    "chart.js": "^2.7.1",
+    "chart.js": "^2.7.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "express": "~4.15.5",
+    "express": "^4.16.3",
     "forever": "^0.15.3",
-    "moment": "^2.19.2",
+    "moment": "^2.22.2",
     "morgan": "~1.9.0",
     "mysql2-db": "0.0.4",
     "pug": "2.0.0-beta11",
